app/assets/stylesheets/application.css.scss
/*
 *= require fonts
*/

@import 'variables';
@import 'bootstrap';

body {
  padding-top: 90px;
}

h1, h2, h3, h4, h5, h6 {
  color: #E20031;
}

strong, h1, h2, h3, h4, h5, h6, #logo p, .btn, dt,
#social, .section a, #contact span:first-of-type, .modal-header q,
.brand .current, .nav .highline, .nav .active, footer a {
  font-family: 'AvalonDemi', sans-serif;
  font-weight: normal;
}

.justify-text {
  @include hyphens();
 
  text-align: justify;
}

blockquote, div, p {
  &.highline {
    border:     0;
    text-align: center;

    span {
      display: block;
    }
  }
}

footer {
  font-size:   16px;
  line-height: 20px;

  .container {
    padding: {
      top:    29px;
      left:   30px;
      bottom: 10px;
    }

    background: image-url('rupy-logo-mini.png') no-repeat left 8px;
  }
}

section.container, footer .container {
  border-top: 8px solid #E20031;
}

.section {
  blockquote {
    margin-bottom: 70px;
  }

  p {
    font-size:   16px;
    line-height: 20px;
  }

  h2 {
    font-size:   64px;
    line-height: 64px; 
    padding:     54px 0;
    text-align:  center;
  }
}

.icon {
  display:        inline-block; 
  vertical-align: top;
  background:     image-url('icons.png') no-repeat;

  a {
    display: inherit;
  }

  &:first-line, a:first-line {
    @include hide-text();
  }

  &.small, &.small a {
    width:  36px;
    height: 36px;
  }

  &.medium, &.medium a {
    width:  46px;
    height: 46px;
  }

  &.large, &.large a {
    width:  68px;
    height: 68px; 
  }

  &.small {
    &.tumblr        { background-position: 0 0 }
    &.twitter       { background-position: -36px 0 }
    &.facebook      { background-position: -72px 0 }
    &.linkedin      { background-position: -108px 0 }
    &.people        { background-position: -144px 0 }
    &.duration      { background-position: -180px 0 }
    &.website       { background-position: -216px 0 }
    &.booking       { background-position: -252px 0}
    &.github-dark   { background-position: -288px 0 }
    &.twitter-dark  { background-position: -324px 0 }
    &.website-dark  { background-position: -360px 0 }
  }

  &.medium {
    &.twitter { background-position: 0 -36px }
    &.tumblr  { background-position: -46px -36px }
  }

  &.large {
    &.bus   { background-position: 0 -83px }
    &.train { background-position: -68px -83px }
    &.car   { background-position: -136px -83px }
    &.plane { background-position: -204px -83px }
  }
}

.content-column {
  margin: {
    left:  15px;
    right: 15px;
  }
}

.btn-primary {
  @include border-radius(0);
  @include box-shadow(none);

  border:     0;
  font-size:  32px;
  color:      $bodyBackground;
  padding:    6px 24px;
}

.nav > li > a:hover {
  background: none;
}

.button-block {
  text-align: center;
}

.modal {
  @include border-radius(0);
  @include box-shadow(none);
  @include grid-core-span(6, $gridColumnWidth, $gridGutterWidth);

  background: #E20031;
  border:     0;
  text-align: left;

  .content-column {
    padding: {
      top:    15px;
      bottom: 15px;
    }
  }

  .modal-header, .modal-body, .modal-footer {
    padding: 0;
  }

  .modal-header {
    border-bottom: 8px solid $bodyBackground;
    margin-bottom: 15px;

    .close {
      @include opacity(1);

      text-shadow: none;
      font-size:   36px;
      font-weight: normal;
    }

    h3 {
      color: #FFFFFF;
    }

    q {
      display: block;
      padding: {
        top:    2px;
        bottom: 8px;
      }

      font-size:   16px;
      line-height: 20px;
    }
  }

  .modal-body {
    img.speaker {
      float:         left;
      margin-right:  10px;
      margin-bottom: 10px;
    }
  }

  .modal-footer {
    @include box-shadow(none);

    margin-top: 15px;
    border:     0;
    background: transparent;
    
    .nav {
      margin-bottom: 0;
    }

    .btn-primary {
      background:      $bodyBackground;
      color:           #E20031 !important;
      text-decoration: none !important;
      font-size:       16px;
      line-height:     20px;
      margin-top:      4px;
      padding: {
        left:  15px;
        right: 15px;
      }
    }    
  }
}

h3.highline {
  text-align:    center;
  border-bottom: 1px solid #E20031;
  height:        20px;

  &:first-line {
    background-color: $bodyBackground;
  }

  &:before, &:after{
    content: '\0000a0 \0000a0';
  }
}

header {
  .container {
    border-bottom: 8px solid #E20031;
    padding-top:   16px;
    background:    image-url('rupy-logo-mini.png') no-repeat left 8px;
  }

  .navbar-inner {
    background: $bodyBackground;
  }

  .navbar-fixed-top > .navbar-inner {
    @include box-shadow(none);
  }

  .navbar .brand, .navbar .nav > li > a {
    text-shadow: none;
  }

  .nav { 
    margin-right: 0 !important;

    & > li:last-of-type a {
      padding-right: 0;
    }

    .active > a {
      background: none !important;
      color:      #E20031 !important;
    }

    .highline {
      color: #FFFFFF !important;
    }
  }

  .nav-collapse > .brand {
    margin-left: 30px;
    color: #FFFFFF;

    padding: {
      left:  0;
      right: 0;
    }
  }
}

.hero-unit {
  @include border-radius(0);

  border:     0 !important;
  padding:    0;
  background: none;
  margin-top: -20px;

  & > .row:last-of-type {
    margin-bottom: 60px;
  }

  .registration-info {
    font-size:   16px;
    line-height: 20px;
  }

  .button-block + div.highline {
    margin-top: 40px;
  }

  blockquote{
    margin-bottom: 30px;
  }

  div.highline {
    margin-bottom: 40px;
  }

  #logo {
    margin: {
      left:   187px;
      bottom: 70px;
    }
 
    width:      688px;
    background: image-url('rupy-logo-large.png') no-repeat;

    h1 {
      @include hide-text();
    }

    p:first-of-type {
      margin: {
        top:  280px;
        left: 186px;
      }

      font-size:   32px;
      line-height: 30px;

      span:first-of-type {
        display: block;
        color: #E20031;
      }
    }
  }
}

.more-on-blog {
  text-align: center;
  font-size:   20px !important;
  line-height: 25px !important;

  margin: {
    top:    60px;
    bottom: 60px;
  }
}

.box {
  h4 {
    color:  #FFFFFF;
    margin: 0;

    span {
      display: block;
    }
  }

  .info {
    color: $bodyBackground;
    text-align: center;
    background: #E20031;
    height:     240px;

    a {
      color: inherit;
    }

    h4 {
      padding-top: 32px;

      & + .title, + p {
        margin-top: 25 + 18 + 5px !important;
      }
    }

    h4, .twitter {
      font-size:   25px;
      line-height: 25px;
    }

    .twitter {
      padding: {
        top:    18px;
        bottom: 5px;
      }
    }

    .title, .additional-info {
      font-size:   16px;
      line-height: 18px;
    }

    .center-block {
      display: table;
      width:   100%;      

      .middle {
        display:        table-cell;
        vertical-align: middle;
      }
    }

    .title {
      height:  50px;
    }

    .additional-info {
      margin-top: 7px;

      a {
        @include font-family-sans-serif();

        text-decoration: underline;
      }
    }

    .more-speakers {
      height:      100%;
      
      p {
        font-size:   20px;
        line-height: 25px;
        color:       #FFFFFF;
      }

      span {
        display: block;
      }
    }
  }
}

#contact {
  padding:     60px 0;
  font-size:   32px;
  line-height: 37px;

  span:first-of-type {
    color: #E20031;
  }
}

#faq {
  h3 {
    text-align:    center;
    font-size:     25px;
    line-height:   31px; 
    margin-bottom: 25px;

    span {
      display: block;
    }
  }

  p {
    font-size:   16px;
    line-height: 20px;
  }

  .row {
    margin-bottom: 70px;
  }
}

#social {
  font-size: 16px;
  border:    0;
  color:     #E20031;
  height:    36px;
}

#sponsors {
  .sponsor {
    padding: {
      top:    45px;
      bottom: 45px;
    }
  }

  .logo {
    &.redhat {
      padding-top: 1.5em;
    }
    &.vendavo {
      padding-top: 0.75em;
    }
  }

  .description {
    @include content-columns(2);

    margin-bottom: 0;      
  }

  .logos {
    padding: {
      left:  $gridColumnWidth;
      right: $gridColumnWidth;
    }

    a {
      margin-right: $gridGutterWidth;
    }

    a:last-of-type {
      margin-right: 0;
    }
  }

  .button-block {
    margin-bottom: 65px;
  }

  h3.highline:last-of-type + div.sponsor {
    border-bottom: 1px solid #E20031;
    margin-bottom: 65px;
  }
}

#location {
  .location-details {
    background:  #E20031;
    color:       $bodyBackground;
    height:      200px;
    font-size:   16px;
    line-height: 20px;

    h3 {
      color:         #FFFFFF;
      line-height:   60px;
      margin-top:    0;
      border-bottom: 8px solid $bodyBackground;
    }
  
    address {
      @include content-columns(2);

      height: 110px; // force breaking after Europe
    }
  }

  h3.highline {
    margin-top: 50px;
  }

  h4.accomodation-highline {
    text-align:  center;
    font-size:   20px;
    line-height: 25px;
    margin: {
      top:    30px;
      bottom: 30px;
    }

    span {
      display: block;
    }

    span:first-of-type {
      @include font-family-sans-serif();
    }
  }

  h4.travel-highline {
    @extend h3.highline;

    height: 68px;
    border: 0;
    margin: {
      top:    20px;
      bottom: 45px;
    }
  }

  .price-for-night {
    margin:      0;
    text-align:  right;
    font-size:   16px;
    line-height: 20px;

    dt {
      color: #E20031;
    }
  }
}

#google-maps, #city-carousel {
  height: 280px;
}

#city-carousel {
  margin-bottom: 0;
}

#accomodation {
  .content-column > p:last-of-type {
     margin-bottom: 20px;
  }
}

#team {
  h4 {
    color: #E20031;

    & + .title, + p {
      margin-top: 25 + 18 + 20px !important;
    }
  }

  .twitter {
    margin-bottom: 15px;
  }

  .info, .twitter a, {
    color: #FFFFFF;
  }

  .info {
    background: #1B2A6B;
    height:     280px;
  }

  p {
    margin: 0 15px;
  }
}

#speakers .row, #team .row {
  margin-bottom: 60px;
}

